Расширено меню настроек

--- a/src/Snakes.vcxproj
+++ b/src/Snakes.vcxproj
@@ -170,6 +170,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="apple.cpp" />
+    <ClCompile Include="settings.cpp" />
     <ClCompile Include="gameMenu.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="serialize.cpp" />
@@ -179,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="apple.h" />
+    <ClInclude Include="settings.h" />
     <ClInclude Include="gameMenu.h" />
     <ClInclude Include="serialize.h" />
     <ClInclude Include="singlepalyer.h" />
