--- a/src/settings.ini
+++ b/src/settings.ini
@@ -2,3 +2,23 @@ Up:W
 Left:A
 Down:S
 Right:D
+Rounds:3
+Bots:4
+Nickname1:UKURISH
+Nickname2:RASKUMARISH
+CellSize:1
+:
+:
+:
+:
+:
+:
+:
+:
+:
+:
+:
+:
+:
+:
+:
