--- a/src/Snakes.vcxproj
+++ b/src/Snakes.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="serialize.cpp" />
     <ClCompile Include="snake.cpp" />
     <ClCompile Include="singlepalyer.cpp" />
+    <ClCompile Include="twoPlayaGame.cpp" />
     <ClCompile Include="wall.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -185,6 +186,7 @@
     <ClInclude Include="serialize.h" />
     <ClInclude Include="singlepalyer.h" />
     <ClInclude Include="snake.h" />
+    <ClInclude Include="twoPlayaGame.h" />
     <ClInclude Include="wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
