Внесены изменения в дизайн

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -3,22 +3,11 @@ Left:A
 Down:S
 Right:D
 Rounds:3
-Bots:4
-Nickname1:UKURISH
-Nickname2:RASKUMARISH
-CellSize:1
-:
-:
-:
-:
-:
-:
-:
-:
-:
-:
-:
-:
-:
-:
-:
+Bot:ON
+Nickname1:GEMDEVPLAYA
+Nickname2:DANYAGINIUSS
+CellSize:3
+Player1Color:3
+Player2Color:4
+AppleColor:1
+BotColor:4
