Доделаны все требования по заданию

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -1,13 +1,17 @@
-Up:W
-Left:A
-Down:S
-Right:D
-Rounds:3
+Up1:W
+Left1:A
+Down1:S
+Right1:D
+Rounds:1
 Bot:ON
-Nickname1:GEMDEVPLAYA
-Nickname2:DANYAGINIUSS
-CellSize:3
-Player1Color:3
-Player2Color:4
+Nickname1:Player1
+Nickname2:Player2
+CellSize:1
+Player1Color:2
+Player2Color:9
 AppleColor:1
-BotColor:4
+BotColor:1
+Up2:Up
+Left2:Left
+Down2:Down
+Right2:Right
